--- a/css/estilo.css
+++ b/css/estilo.css
@@ -48,10 +48,60 @@ button.add{
 
 main{
     display: flex;
-    flex-grow: row wrap;
+    flex-flow: row wrap;
     width: 90%;
     margin: auto auto;
     border:1px solid blue;
     padding-top: 40px;
+
+}
+
+.item{
+    display: flex;
+    flex-flow:row wrap;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    height: 80px;
+    width: 100%;
+    box-shadow: 0 0 20px #ccc;
+    margin-bottom: 2% ;
+
+}
+
+.item.clicado{
+    background: #def8cf;
+}
+
+.item.clicado .item-nome{
+    text-decoration: line-through;
+    color: gray;
+}
+
+.item-icon {
+    flex: 25%;
+    text-align: center;
+    font-size: 1rem;
+}
+.item-nome {
+    flex: 55%;
+    font-size: 20px;
     
+}
+.item-botao {
+    flex: 20%;
+    
+}
+
+.delete {
+    background: red;
+    color: white;
+    border: none;
+    padding: 10px;
+    height: 80px;
+    width: 100%;
+}
+
+.fa-circle-check {
+    color: green;
 }
