--- a/css/estilo.css
+++ b/css/estilo.css
@@ -51,7 +51,6 @@ main{
     flex-flow: row wrap;
     width: 90%;
     margin: auto auto;
-    border:1px solid blue;
     padding-top: 40px;
 
 }
@@ -66,6 +65,7 @@ main{
     width: 100%;
     box-shadow: 0 0 20px #ccc;
     margin-bottom: 2% ;
+    cursor: pointer;
 
 }
 
@@ -100,6 +100,7 @@ main{
     padding: 10px;
     height: 80px;
     width: 100%;
+    cursor: pointer;
 }
 
 .fa-circle-check {
