--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,10 +25,13 @@ header{
 }
 
 input{
-    height: 120px;
-    font-size: 2rem;
+    height: 90px;
+    font-size: 1.5rem;
     width: 80%;
     padding-left: 10%;
+    border: none;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius:10px ;
 
 }
 
@@ -39,7 +42,7 @@ button.add{
     color: white;
     font-weight: bold;
     border: none;
-    height: 120px;
+    height: 90px;
     border-top-right-radius: 10px;
     border-bottom-right-radius:10px ;
 
@@ -66,6 +69,10 @@ main{
     box-shadow: 0 0 20px #ccc;
     margin-bottom: 2% ;
     cursor: pointer;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius:10px ;
+   
+
 
 }
 
@@ -81,7 +88,7 @@ main{
 .item-icon {
     flex: 25%;
     text-align: center;
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 .item-nome {
     flex: 55%;
@@ -94,6 +101,7 @@ main{
 }
 
 .delete {
+    font-size: 1.5rem;
     background: red;
     color: white;
     border: none;
@@ -101,6 +109,8 @@ main{
     height: 80px;
     width: 100%;
     cursor: pointer;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius:10px ;
 }
 
 .fa-circle-check {
